--- a/touchscreen.html
+++ b/touchscreen.html
@@ -39,11 +39,11 @@
       }
 
       // Add event listeners for sphere taps
-      document.getElementById('blue-sphere').addEventListener('click', function () {
+      document.getElementById('blue-sphere').addEventListener('mousedown', function () {
         handleSphereTap('blue-sphere', 'blue-cube');
       });
 
-      document.getElementById('red-sphere').addEventListener('click', function () {
+      document.getElementById('red-sphere').addEventListener('mousedown', function () {
         handleSphereTap('red-sphere', 'red-cube');
       });
     </script>
