--- a/touchscreen.html
+++ b/touchscreen.html
@@ -4,7 +4,7 @@
   <title>AR.js Example</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.min.js"></script>
-  <script src="https://unpkg.com/aframe-gesture-detector/dist/aframe-gesture-detector.min.js"></script>
+  <!-- <script src="https://unpkg.com/aframe-gesture-detector/dist/aframe-gesture-detector.min.js"></script> -->
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene
