--- a/touchscreen.html
+++ b/touchscreen.html
@@ -1,59 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AR.js Example</title>
+  <title>Simple Click Test</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.min.js"></script>
-  <!-- <script src="https://unpkg.com/aframe-gesture-detector/dist/aframe-gesture-detector.min.js"></script> -->
 </head>
-<body style="margin: 0; overflow: hidden;">
-  <a-scene
-    vr-mode-ui="enabled: false;"
-    loading-screen="enabled: false;"
-    renderer="logarithmicDepthBuffer: true;"
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-    id="scene"
-    embedded
-    gesture-detector
-  >
-    <!-- Define the AR.js marker -->
-    <a-marker preset="hiro">
-      <!-- Blue sphere object -->
-      <a-sphere position="-1 0.5 0" radius="0.5" color="blue" id="blue-sphere"></a-sphere>
-
-      <!-- Red sphere object -->
-      <a-sphere position="1 0.5 0" radius="0.5" color="red" id="red-sphere"></a-sphere>
-
-      <!-- Hidden blue cube object -->
-      <a-box position="-1 0.5 0" depth="0.5" height="0.5" width="0.5" color="blue" visible="false" id="blue-cube"></a-box>
-
-      <!-- Hidden red cube object -->
-      <a-box position="1 0.5 0" depth="0.5" height="0.5" width="0.5" color="red" visible="false" id="red-cube"></a-box>
-    </a-marker>
+<body>
+  <a-scene>
+    <!-- Simple clickable object -->
+    <a-box position="0 1 -3" depth="1" height="1" width="1" color="red" id="clickable-box"></a-box>
 
     <!-- Camera setup -->
-    <a-entity camera></a-entity>
+    <a-entity camera look-controls></a-entity>
   </a-scene>
 
   <script>
-    // Function to handle sphere taps
-    function handleSphereTap(sphereId, cubeId) {
-      // Get the sphere and cube elements
-      var sphere = document.getElementById(sphereId);
-      var cube = document.getElementById(cubeId);
-
-      // Hide the sphere and show the cube
-      sphere.setAttribute('visible', false);
-      cube.setAttribute('visible', true);
-    }
-
-    // Add event listeners for sphere taps
-    document.getElementById('blue-sphere').addEventListener('click', function () {
-      handleSphereTap('blue-sphere', 'blue-cube');
-    });
-
-    document.getElementById('red-sphere').addEventListener('click', function () {
-      handleSphereTap('red-sphere', 'red-cube');
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('clickable-box').addEventListener('click', function () {
+        alert('Box clicked!');
+      });
     });
   </script>
 </body>
