--- a/work.html
+++ b/work.html
@@ -1,4 +1,3 @@
-
 <!doctype HTML>
 <html>
     <head>
@@ -16,14 +15,15 @@
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-click-events/models/CesiumMan.gltf"></a-asset-item>
+            <!-- No external assets needed for a simple cube -->
         </a-assets>
 
         <a-marker markerhandler emitevents="true" cursor="rayOrigin: mouse" id="animated-marker" type='barcode' value='6'>
             <a-entity
                 id="animated-model"
-                gltf-model="#animated-asset"
-                scale="2">
+                geometry="primitive: box; width: 1; height: 1; depth: 1;"
+                material="color: pink"
+                position="0 0.5 0">
             </a-entity>
         </a-marker>
 
