--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
     <a-assets>
-      <a-asset-item id="3d-model" src="./house .glb"></a-asset-item>
+      <a-asset-item id="3d-model" src="./house.glb"></a-asset-item>
       <video id="video" src="./videoforar.mp4" autoplay loop muted playsinline></video>
     </a-assets>
     <a-marker preset="hiro">
@@ -33,6 +33,22 @@
   </a-scene>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      const houseModel = document.querySelector('#house-model');
+
+      // Function to create small boxes
+      function createBoxes() {
+        for (let i = 0; i < 5; i++) {
+          const box = document.createElement('a-box');
+          box.setAttribute('position', { x: Math.random() * 0.4 - 0.2, y: Math.random() * 0.4, z: Math.random() * 0.4 - 0.2 });
+          box.setAttribute('scale', '0.1 0.1 0.1');
+          box.setAttribute('color', 'blue');
+          houseModel.appendChild(box);
+        }
+      }
+
+      // Add click event listener to the house model
+      houseModel.addEventListener('click', createBoxes);
+
       const videoElement = document.querySelector('#video');
 
       // Ensure the video plays once it can
