--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="0 0.5 0" color="blue"></a-box>
+      <a-box id="color-box" position="0 0.5 0" color="blue"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
+
+  <script>
+    AFRAME.registerComponent('change-color-on-timeout', {
+      init: function () {
+        var box = document.querySelector('#color-box');
+        setTimeout(function () {
+          box.setAttribute('color', 'pink');
+        }, 5000); // Change color after 5 seconds
+      }
+    });
+
+    document.querySelector('a-marker').addEventListener('markerFound', function () {
+      document.querySelector('#color-box').setAttribute('change-color-on-timeout', '');
+    });
+  </script>
 </body>
 </html>
