--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
+    <a-assets>
+      <a-mixin id="clickable" geometry="primitive: box" material="color: blue" position="0 0.5 0"></a-mixin>
+    </a-assets>
+    
     <a-marker preset="hiro">
-      <a-box id="color-box" position="0 0.5 0" color="blue"></a-box>
+      <a-entity id="color-box" mixin="clickable"></a-entity>
     </a-marker>
+    
     <a-entity camera></a-entity>
   </a-scene>
 
   <script>
     AFRAME.registerComponent('change-color-on-click', {
       init: function () {
-        var box = document.querySelector('#color-box');
+        var box = this.el;
         box.addEventListener('click', function () {
-          box.setAttribute('color', 'pink');
+          box.setAttribute('material', 'color', 'pink');
         });
       }
     });
 
+    document.querySelector('#color-box').addEventListener('loaded', function () {
+      this.setAttribute('change-color-on-click', '');
+    });
+
     document.querySelector('a-marker').addEventListener('markerFound', function () {
       document.querySelector('#color-box').setAttribute('visible', 'true');
-      document.querySelector('#color-box').setAttribute('change-color-on-click', '');
     });
 
     document.querySelector('a-marker').addEventListener('markerLost', function () {
