--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
     <a-assets>
-      <a-asset-item id="3d-model" src="./house .glb"></a-asset-item>
+      <a-asset-item id="3d-model" src="./house.glb"></a-asset-item>
       <video id="video" src="./videoforar.mp4" autoplay loop muted playsinline></video>
     </a-assets>
     <a-marker preset="hiro">
@@ -19,48 +19,24 @@
         rotation="270 0 0"
         position="-0.5 0 0"
       ></a-entity>
-      <a-video
-        id="ar-video"
-        src="#video"
-        width="0.6"
-        height="0.3"
-        rotation="-90 0 0"
-        scale="1 1 1"
-        position="0.5 0 0"
-      ></a-video>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      const videoElement = document.querySelector('#video');
-      const arVideoEntity = document.querySelector('#ar-video');
       const houseModel = document.querySelector('#house-model');
 
-      // Ensure the video plays once it can
-      videoElement.addEventListener('canplay', function() {
-        videoElement.play();
-      });
-
-      // Toggle play/pause on click
-      arVideoEntity.addEventListener('click', function() {
-        if (videoElement.paused) {
-          videoElement.play();
-        } else {
-          videoElement.pause();
-        }
-      });
-
-      // Function to create small boxes around the house
+      // Function to create small boxes around the house in a semi-circle
       function createBoxes() {
         const scene = document.querySelector('a-scene');
-        for (let i = 0; i < 5; i++) {
+        const radius = 1.5; // Radius of the semi-circle
+        const numBoxes = 5; // Number of boxes
+        for (let i = 0; i < numBoxes; i++) {
+          const angle = Math.PI * (i / (numBoxes - 1)); // Angle for semi-circle
+          const x = radius * Math.cos(angle);
+          const z = radius * Math.sin(angle);
           const smallBox = document.createElement('a-box');
-          smallBox.setAttribute('position', { 
-            x: (Math.random() - 0.5) * 2, 
-            y: 0.5, 
-            z: (Math.random() - 0.5) * 2 
-          });
+          smallBox.setAttribute('position', { x: x, y: 0.5, z: z });
           smallBox.setAttribute('scale', '0.2 0.2 0.2');
           smallBox.setAttribute('color', 'orange');
           houseModel.appendChild(smallBox);
