--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
       });
 
-      // Function to create small boxes around the house in a semi-circular format
+      // Function to create small boxes in a rainbow format above the house
       function createBoxes() {
         const numBoxes = 5; // Number of boxes
         const radius = 2; // Radius of the semi-circle
@@ -60,10 +60,10 @@
 
         for (let i = 0; i < numBoxes; i++) {
           const smallBox = document.createElement('a-box');
-          const angle = i * angleStep - (Math.PI / 2); // Adjust angle to start from the front of the house
+          const angle = i * angleStep - (Math.PI / 2); // Adjust angle to start from the front
           const x = Math.cos(angle) * radius;
           const z = Math.sin(angle) * radius;
-          smallBox.setAttribute('position', { x: x - 0.5, y: heightAboveHouse, z: z }); // Adjust position relative to house
+          smallBox.setAttribute('position', { x: x - 0.5, y: heightAboveHouse, z: z }); // Position above the house
           smallBox.setAttribute('scale', '0.2 0.2 0.2');
           smallBox.setAttribute('color', 'orange');
           houseModel.appendChild(smallBox);
